# swift

./: CMakeLists.txt
docs/ReferenceGuides/: UnderscoredAttributes.md
include/swift/ABI/: Metadata.h
include/swift/AST/: Attr.def  Import.h  Module.h
include/swift/PrintAsClang/: ClangMacros.def
include/swift/Runtime/: Metadata.h
lib/AST/: Module.cpp  TypeCheckRequests.cpp
lib/PrintAsClang/: CMakeLists.txt  ClangMacros.def  PrintAsClang.cpp  compatibility_symbols
lib/Sema/: ImportResolution.cpp  TypeCheckAttr.cpp  TypeCheckDeclOverride.cpp
lib/SymbolGraphGen/: SymbolGraph.cpp  SymbolGraphGen.cpp
stdlib/public/runtime/: Casting.cpp  ReflectionMirror.cpp
test/Interop/Cxx/stdlib/: use-std-vector.swift
test/SymbolGraph/Module/: NoDocExportedImport.swift
test/SymbolGraph/Symbols/: NoDocAttribute.swift
tools/: CMakeLists.txt
tools/swift-compatibility-symbols/: swift-compatibility-symbols.cpp
